--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="./main.js" type="module"></script>
-    <link rel="stylesheet" href="./index.scss" />
+    <script src="/public/main.js" type="module"></script>
+    <link rel="stylesheet" href="/public/index.scss" type="module" />
     <title>Dark/Light Theme</title>
   </head>
   <body>
